# modutool

./: Cargo.toml  README.md
src/: comport.rs  helper.rs  main.rs  mqtt.rs  slint_ui.rs
src/helpers/: convert.rs  json.rs  mqtt.rs
src/pages/: home_page.rs  page_one.rs  page_two.rs  schindler_page.rs
ui/: app-window.slint
ui/components/: Input.slint  buttons.slint  graphs.slint  header.slint  input.slint  new.slint  old.slint  page.slint  pages.slint  style.slint
ui/pages/: menu-page.slint  otis-double-page.slint  otis-page.slint  schindler-double-page.slint  schindler-page.slint  schindler-test-page.slint  style-test.slint
ui/pages/menu/: home-menu.slint  modu-soft-kne.slint  modu-soft-ots-menu.slint  modu-soft-sch-menu.slint
ui/views/pages/: HomePage.slint  PageOne.slint  PageTwo.slint  SchindlerPage.slint  SettingsPage.slint  StyleTestPage.slint
