[package]
name = "modu-tool"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
rumqttc = "0.24.0"
rustls = "0.23.25"
serde_json = "1.0.140"
open = "5.3.2"

[build-dependencies]
slint-build = "1.8.0"
